# clawpass

./: .gitignore  IDENTITY.md  MEMORY.md  Package.swift  Podfile  README.md  SYNC_FIX_FULL.md  USER.md  WORKFLOW_FIX.md  build-ios-on-mac.sh  clawpass_ios_workflow_fix.yml  clawpass_tcp_sync.rs  copy-to-mac.sh  job_log.txt  recover.ps1  test_ios_destinations.ps1
.github/workflows/: ci.yml  ios-build.yml  ios_build.yml  ios_build.yml-works up to app bundle.bak
.openclaw/: workspace-state.json
ClawPass/: ARCHITECTURE.md  ClawPassApp.swift  TODO.md
ClawPass.xcodeproj/: project.pbxproj
ClawPass/Models/: VaultEntry.swift
ClawPass/Services/: CryptoService.swift  SyncService.swift  VaultManager.swift
ClawPass/Views/: ContentView.swift  EntryDetailView.swift  SyncView.swift
ClawPass/desktop/: README.md  index.html  package.json  vite.config.ts
ClawPass/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ClawPass/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sync.rs  vault.rs
ClawPass/ios/: Package.swift
ControlCenter/: ControlCenter.ps1  OpenClawControl.bat
ControlCenter_v3/: Form1.Designer.cs  Form1.cs  Program.cs
ios/: ExportOptions.plist  Info.plist  Package.swift
ios/ClawPass.xcodeproj/: project.pbxproj
ios/Models/: VaultEntry.swift
ios/Services/: CryptoService.swift  (+2 more)
lib/: config_manager.ts
memory/: 2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-13.md  2026-04-21-2221.md  2026-04-21-request-timed-out-before-a-res.md  2026-04-22.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-05-05.md  2026-05-06.md  project-control-center.md
(+49 files in other folders)
