[package]
name = "clawpass-tauri"
version = "0.1.0"
description = "ClawPass Password Manager Desktop"
authors = ["Claw"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Encryption and database
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled-sqlcipher"] }
csv = "1.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"

# Networking for sync
tokio-tungstenite = "0.21"
mdns-sd = "0.10"

# Windows Hello
windows = { version = "0.52", features = ["Security_Credentials_UI", "Win32_System_WinRT"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
